[tool.poetry]
name = "ice-cream-data-ops"
version = "0.1.0"
description = ""
authors = ["shuv04 <shuvankar.pati@gds.ey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cognite-toolkit = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
